--- a/student.ipynb
+++ b/student.ipynb
@@ -7,10 +7,10 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
+    "* Student name: stanoff kipkirui\n",
+    "* Student pace:  full time\n",
     "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
+    "* Instructor name:Veronica Isiaho \n",
     "* Blog post URL:\n"
    ]
   },
@@ -22,11 +22,19 @@
    "source": [
     "# Your code here - remember to use markdown cells for comments as well!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                        **INTRODUCTION**\n",
+    "                        "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -40,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
