--- a/student.ipynb
+++ b/student.ipynb
@@ -1418,7 +1418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "**Modeling and Data Analysis**\n",
+    "**MODELING AND DATA ANALYSIS**\n",
     "\n"
    ]
   }
