--- a/student.ipynb
+++ b/student.ipynb
@@ -1439,7 +1439,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_11192\\3796630657.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_12308\\3796630657.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  data_subset.corr()[\"price\"]\n"
      ]
     },
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.493\n",
       "Method:                 Least Squares   F-statistic:                 2.097e+04\n",
       "Date:                Thu, 06 Jul 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        10:52:56   Log-Likelihood:            -2.9997e+05\n",
+      "Time:                        14:47:51   Log-Likelihood:            -2.9997e+05\n",
       "No. Observations:               21590   AIC:                         5.999e+05\n",
       "Df Residuals:                   21588   BIC:                         6.000e+05\n",
       "Df Model:                           1                                         \n",
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
        "max    1.145957e+04"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
        "  <th>Date:</th>             <td>Thu, 06 Jul 2023</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>11:14:56</td>     <th>  Log-Likelihood:    </th> <td>-2.9997e+05</td>\n",
+       "  <th>Time:</th>                 <td>14:47:51</td>     <th>  Log-Likelihood:    </th> <td>-2.9997e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 21590</td>      <th>  AIC:               </th>  <td>5.999e+05</td> \n",
@@ -1793,7 +1793,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.493\n",
        "Method:                 Least Squares   F-statistic:                 2.097e+04\n",
        "Date:                Thu, 06 Jul 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        11:14:56   Log-Likelihood:            -2.9997e+05\n",
+       "Time:                        14:47:51   Log-Likelihood:            -2.9997e+05\n",
        "No. Observations:               21590   AIC:                         5.999e+05\n",
        "Df Residuals:                   21588   BIC:                         6.000e+05\n",
        "Df Model:                           1                                         \n",
@@ -1815,7 +1815,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,11 +1831,15 @@
    "metadata": {},
    "source": [
     "The resulting regression line found is:\n",
+    "    \n",
     "price = 540308.795646 + 280.880026sqft_living\n",
     "\n",
     "Generally,the model is statistically significant overall, with an F-statistic p-value less than o.o5.\n",
+    "\n",
     "The model also explains about 49 % of the variance in price.\n",
+    "\n",
     "Besides, the model coefficients (const and sqft_living) are both statistically significant , with t-statistic p-values under 0.05.\n",
+    "\n",
     "For an increase in in 1 square foot of the living space in the home ,there exists an associated increase in price of 540,309 dollars."
    ]
   },
@@ -1844,12 +1848,13 @@
    "metadata": {},
    "source": [
     "**Simple Linear Regression Visualization**\n",
+    "\n",
     "We'll also plot the actual vs. predicted values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1931,36 +1936,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Multiple Regression with Many Features**\n",
+    "\n",
+    "We are now creating  a model that uses all the columns from our sub setted data set that will help us evaluate the price of houses in King County."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2273,7 +2259,7 @@
        "[21590 rows x 16 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2282,26 +2268,12 @@
     "y = data_subset[\"price\"]\n",
     "x = data_subset[['bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'floors', 'waterfront', 'grade']]\n",
     "x = pd.get_dummies(x, columns = [\"waterfront\", \"grade\"], drop_first = True)\n",
-    "x"
+    "x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2319,10 +2291,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   2176.</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 04 Jul 2023</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
+       "  <th>Date:</th>             <td>Thu, 06 Jul 2023</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>15:46:32</td>     <th>  Log-Likelihood:    </th> <td>-2.9692e+05</td>\n",
+       "  <th>Time:</th>                 <td>14:47:57</td>     <th>  Log-Likelihood:    </th> <td>-2.9692e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 21590</td>      <th>  AIC:               </th>  <td>5.939e+05</td> \n",
@@ -2416,8 +2388,8 @@
        "Dep. Variable:                  price   R-squared:                       0.617\n",
        "Model:                            OLS   Adj. R-squared:                  0.617\n",
        "Method:                 Least Squares   F-statistic:                     2176.\n",
-       "Date:                Tue, 04 Jul 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        15:46:32   Log-Likelihood:            -2.9692e+05\n",
+       "Date:                Thu, 06 Jul 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        14:47:57   Log-Likelihood:            -2.9692e+05\n",
        "No. Observations:               21590   AIC:                         5.939e+05\n",
        "Df Residuals:                   21573   BIC:                         5.940e+05\n",
        "Df Model:                          16                                         \n",
@@ -2456,7 +2428,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,7 +2441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2495,7 +2467,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2537,34 +2509,24 @@
     "\n",
     "grade_3 Poor to grade_9 Better: These coefficients represent the estimated price differences for properties with different grade levels compared to the reference category (grade_1 or another reference grade). Negative coefficients (e.g., grade_3 Poor) suggest lower prices compared to the reference category, while positive coefficients (e.g., grade_9 Better) suggest higher prices.\n",
     "\n",
-    "Overall, these coefficients provide insight into the relationship between each predictor variable and the target variable (price) in the multiple linear regression model. They indicate the estimated change in price associated with a unit change in each predictor, assuming other variables are held constant. The signs and magnitudes of the coefficients help identify the direction and strength of these associations.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "Overall, these coefficients provide insight into the relationship between each predictor variable and the target variable (price) in the multiple linear regression model. They indicate the estimated change in price associated with a unit change in each predictor, assuming other variables are held constant. The signs and magnitudes of the coefficients help identify the direction and strength of these associations.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Multiple linear regression visualization**\n",
+    "\n",
+    "We will continue plotting partial regression plots,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
